--- a/src/pages/_main/_main.module.scss
+++ b/src/pages/_main/_main.module.scss
@@ -1,6 +1,6 @@
-@import '~/styles/functions.scss';
-@import '~/styles/mixins.scss';
-@import '~/components/theme/theme-provider-mixins.module.scss';
+@import '~styles/functions.scss';
+@import '~styles/mixins.scss';
+@import '~components/theme/theme-provider-mixins.module.scss';
 
 .container {
   position: relative;
