--- a/src/components/theme/toggler/theme-toggler.module.scss
+++ b/src/components/theme/toggler/theme-toggler.module.scss
@@ -1,4 +1,5 @@
-@import '~/components/theme/theme-provider-mixins.module.scss';
+@import '~components/theme/theme-provider-mixins.module.scss';
+@import '~styles/functions.scss';
 
 .theme-toggler {
   display: block;
@@ -14,7 +15,12 @@
     opacity: 0.6;
   }
 
-  @include themeLight {
+  &:hover {
+    opacity: 1;
+    transform: translate(0);
+  }
+
+  @include theme($midnight, $light) {
     color: #000;
   }
 
@@ -22,10 +28,9 @@
     color: #fff;
   }
 
-  @include themeChangeTransition(color);
 
   &_inverted {
-    @include themeLight {
+    @include theme($midnight, $light) {
       color: #fff;
     }
 
