--- a/src/components/typography/typography.module.scss
+++ b/src/components/typography/typography.module.scss
@@ -1,18 +1,21 @@
-@import '~/styles/variables.scss';
-@import '~/styles/functions.scss';
-@import '~/components/theme/theme-provider-mixins.module.scss';
+@import '~styles/variables.scss';
+@import '~styles/functions.scss';
+@import '~components/theme/theme-provider-mixins.module.scss';
 
 $lightThemeBlack: #2E2E48;
 $lightThemeDarkGray: #3D465C;
 $lightThemeGray: #646A7B;
 $lightThemeLightGray: #79819A;
 
+$midnightThemeBlack: hsl(0, 7%, 15%);
+$midnightThemeDarkGray: hsl(30, 7%, 25%);
+$midnightThemeGray: hsl(30, 7%, 40%);
+$midnightThemeLightGray: hsl(225, 14%, 40%);
+
 $darkThemeBlack: #E0E0EB;
 $darkThemeDarkGray: #D2D4DB;
 $darkThemeGray: #AAAFBB;
 $darkThemeLightGray: #8E94A4;
-
-$accent: #516CF7;
 
 .typography {
   display: block;
@@ -25,23 +28,17 @@ $accent: #516CF7;
 
   &[href]{
     position: relative;
-    transition: color 100ms ease-in-out;
-
-    &::before {
-      content: '';
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 100%;
-      height: 100%;
-      box-sizing: content-box;
-      padding: 0.3em 0.2em;
-      transform: translate(-50%, -50%);
-    }
+    transition: color 300ms ease-in-out;
 
     &:hover {
+      transition-duration: 100ms;
+
       @include themeLight {
         color: #516CF7;
+      }
+
+      @include themeMidnight {
+        color: #9E3F37;
       }
 
       @include themeDark {
@@ -111,6 +108,10 @@ $accent: #516CF7;
       color: $lightThemeBlack;
     }
 
+    @include themeMidnight {
+      color: $midnightThemeBlack;
+    }
+
     @include themeDark {
       color: $darkThemeBlack;
     }
@@ -119,6 +120,10 @@ $accent: #516CF7;
   &_dark-gray-color {
     @include themeLight {
       color: $lightThemeDarkGray;
+    }
+
+    @include themeMidnight {
+      color: $midnightThemeDarkGray;
     }
 
     @include themeDark {
@@ -131,6 +136,10 @@ $accent: #516CF7;
       color: $lightThemeGray;
     }
 
+    @include themeMidnight {
+      color: $midnightThemeGray;
+    }
+
     @include themeDark {
       color: $darkThemeGray;
     }
@@ -141,13 +150,27 @@ $accent: #516CF7;
       color: $lightThemeLightGray;
     }
 
+    @include themeMidnight {
+      color: $midnightThemeLightGray;
+    }
+
     @include themeDark {
       color: $darkThemeLightGray;
     }
   }
 
   &_accent-color {
-    color: $accent;
+    @include themeLight {
+      color: #516CF7;
+    }
+
+    @include themeMidnight {
+      color: #9E3F37;
+    }
+
+    @include themeDark {
+      color: #8397fc;
+    }
   }
 
   &_white-color {
