--- a/src/templates/cv/aside/aside.module.scss
+++ b/src/templates/cv/aside/aside.module.scss
@@ -1,6 +1,7 @@
 @import "~/styles/functions.scss";
 @import "~/styles/mixins.scss";
-@import '~/components/theme/theme-provider-mixins.module.scss';
+@import '~components/theme/theme-provider-mixins.module.scss';
+@import '~components/typography/typography.module.scss';
 
 .aside {
   position: relative;
@@ -8,6 +9,10 @@
 
   @include themeLight {
     background-color: #ffffff;
+  }
+
+  @include themeMidnight {
+    background-color: hsl(32, 79%, 96%);
   }
 
   @include themeDark {
@@ -45,6 +50,10 @@
     background-image: linear-gradient(102.91deg, hsl(277, 49%, 29%) 2.33%, hsl(212, 61%, 42%) 100%);
   }
 
+  @include themeMidnight {
+    background-image: linear-gradient(102.91deg, hsl(5, 48%, 42%) 2.33%, hsl(5, 52%, 62%) 100%);
+  }
+
   @include themeDark {
     background-image: linear-gradient(102.91deg, hsl(277, 56%, 70%) 2.33%, hsl(212, 70%, 70%) 100%);
   }
@@ -66,10 +75,13 @@
   width: 100%;
   height: 100%;
   min-width: 100%;
-  background-color: #E2E6EE;
 
   @include themeLight {
     background-color: #E2E6EE;
+  }
+
+  @include themeMidnight {
+    background-color: hsl(28, 59%, 90%);
   }
 
   @include themeDark {
@@ -85,6 +97,10 @@
 
     @include themeLight {
       fill: #646A7B;
+    }
+
+    @include themeLight {
+      fill: $lightThemeGray;
     }
 
     @include themeDark {
