--- a/src/templates/cv/aside/list/list.module.scss
+++ b/src/templates/cv/aside/list/list.module.scss
@@ -1,5 +1,5 @@
 @import "~/styles/functions.scss";
-@import '~/styles/mixins.scss';
+@import '~styles/mixins.scss';
 
 .aside-list {
   display: flex;
