--- a/src/templates/cv/main/block/block.module.scss
+++ b/src/templates/cv/main/block/block.module.scss
@@ -50,7 +50,7 @@
     height: 100%;
     border-radius: get-rem(16);
 
-    @include themeLight {
+    @include theme($light, $midnight) {
       box-shadow: 0 get-rem(18) get-rem(10) rgba(0, 0, 0, 0.01),
                   0 get-rem(8) get-rem(8) rgba(0, 0, 0, 0.02),
                   0 get-rem(2) get-rem(4) rgba(0, 0, 0, 0.02);
