--- a/src/templates/cv/aside/aside.module.scss
+++ b/src/templates/cv/aside/aside.module.scss
@@ -6,25 +6,93 @@
 .aside {
   position: relative;
   white-space: nowrap;
+  height: 100%;
+  padding: get-rem(18);
+
+  @include screenLg() {
+    padding: 0;
+  }
 
   @include themeLight {
-    background-color: #ffffff;
+    background-color: #F7F9FC;
   }
 
   @include themeMidnight {
-    background-color: hsl(32, 79%, 96%);
+    background-color: #F9F0E8;
   }
 
   @include themeDark {
-    background-color: #1B2132;
+    background-color: #121621;
   }
-  @include themeChangeTransition(background-color);
+
+
+  &__content {
+    position: relative;
+    z-index: 1;
+    min-height: 100%;
+    border-radius: get-rem(16);
+    padding: get-rem(28);
+
+    @include screenLg() {
+      border-radius: 0;
+      padding: get-rem(48);
+    }
+
+    @include themeLight {
+      background-color: #ffffff;
+    }
+
+    @include themeMidnight {
+      background-color: #fdf5ed;
+    }
+
+    @include themeDark {
+      background-color: #1B2132;
+    }
+
+    @include themeChangeTransition(background-color);
+
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      z-index: -1;
+      pointer-events: none;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: get-rem(16);
+
+      @include theme($light, $midnight) {
+        box-shadow: 0 get-rem(18) get-rem(10) rgba(0, 0, 0, 0.01),
+          0 get-rem(8) get-rem(8) rgba(0, 0, 0, 0.02),
+          0 get-rem(2) get-rem(4) rgba(0, 0, 0, 0.02);
+      }
+
+      @include themeDark {
+        box-shadow: 0 get-rem(18) get-rem(10) rgba(0, 0, 0, 0.05),
+          0 get-rem(8) get-rem(8) rgba(0, 0, 0, 0.1),
+          0 get-rem(2) get-rem(4) rgba(0, 0, 0, 0.1);
+      }
+
+      @include themeChangeTransition(box-shadow);
+
+      @include print {
+        filter: opacity(1);
+      }
+
+      @include screenMd {
+        display: none;
+      }
+    }
+  }
 }
 
 .theme-toggler {
   position: absolute;
-  top: get-rem(64);
-  right: get-rem(64);
+  top: get-rem(24);
+  right: get-rem(24);
 
   @include themeLight {
     color: #1B2132;
@@ -96,11 +164,11 @@
     height: get-rem(20);
 
     @include themeLight {
-      fill: #646A7B;
+      fill: $lightThemeGray;
     }
 
-    @include themeLight {
-      fill: $lightThemeGray;
+    @include themeMidnight {
+      fill: $midnightThemeGray;
     }
 
     @include themeDark {
