--- a/src/templates/cv/main/main.module.scss
+++ b/src/templates/cv/main/main.module.scss
@@ -1,6 +1,15 @@
+@import '~styles/mixins.scss';
+@import '~styles/functions.scss';
 @import '~components/theme/theme-provider-mixins.module.scss';
 
 .main {
+  padding: get-rem(18);
+  padding-bottom: get-rem(80);
+
+  @include screenLg() {
+    padding: get-rem(64) get-rem(48) get-rem(48) get-rem(32);
+  }
+
   @include themeLight {
     background-color: #F7F9FC;
   }
