--- a/src/components/theme/toggler/midnight-icon.module.scss
+++ b/src/components/theme/toggler/midnight-icon.module.scss
@@ -1,12 +1,16 @@
 @import '../theme-provider-mixins.module.scss';
 
-.sunset-icon {
+.bulb-icon {
   display: block;
   width: 1em;
   height: 1em;
 
   &__core {
-    animation: scale $themeChangingDuration * 2 + ms cubic-bezier(0.22, 1, 0.36, 1) forwards;
+    animation: fadeIn $themeChangingDuration * 2 + ms cubic-bezier(0.22, 1, 0.36, 1) forwards;
+  }
+
+  &__rays {
+    animation: scale $themeChangingDuration * 2+ms cubic-bezier(0.22, 1, 0.36, 1) forwards;
     transform-origin: bottom center;
   }
 }
@@ -19,5 +23,15 @@
 
   to {
     transform: scale(100%);
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
