--- a/src/templates/cv/download-button/download-button.module.scss
+++ b/src/templates/cv/download-button/download-button.module.scss
@@ -3,14 +3,16 @@
 
 .download-button {
   display: flex;
+  justify-content: center;
   align-items: center;
-  overflow: hidden;
-  border-radius: get-rem(8);
-  height: get-rem(50);
-  color: #fff;
+  border-radius: 50%;
   transition: background-color 300ms ease-in-out;
   cursor: pointer;
   text-decoration: none;
+  font-size: 0;
+  color: #fff;
+  height: get-rem(50);
+  width: get-rem(50);
 
   @include themeMidnight {
     background-color: hsl(5, 48%, 42%);
@@ -22,34 +24,10 @@
 
   @include themeChangeTransition(background-color);
 
+  @include themeChangeTransition(background-color);
+
   &:hover {
     transition-duration: 100ms;
-
-    @include themeMidnight {
-      background-color: hsl(5, 48%, 33%);
-    }
-
-    @include theme($light, $dark) {
-      background-color: #334BFF;
-    }
-  }
-
-  &__text {
-    text-align: center;
-    flex-grow: 1;
-    font-size: get-rem(16);
-    padding: 0 get-rem(24);
-  }
-
-  &__icon-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: get-rem(50);
-    min-width: get-rem(50);
-    flex: 0 0 get-rem(50);
-    @include themeChangeTransition(background-color);
 
     @include themeMidnight {
       background-color: hsl(5, 48%, 33%);
