fix location icon color

--- a/src/templates/cv/main/block/block.module.scss
+++ b/src/templates/cv/main/block/block.module.scss
@@ -158,6 +158,10 @@
       fill: $lightThemeLightGray;
     }
 
+    @include themeMidnight {
+      fill: $midnightThemeLightGray;
+    }
+
     @include themeDark {
       fill: $darkThemeLightGray;
     }
