--- a/src/templates/cv/cv.module.scss
+++ b/src/templates/cv/cv.module.scss
@@ -194,5 +194,24 @@
 
 .main {
   flex: 1;
-}
+  padding: get-rem(18);
+  padding-bottom: get-rem(64);
 
+  @include screenLg() {
+    padding: get-rem(64) get-rem(48) get-rem(48) get-rem(32);
+  }
+
+  @include themeLight {
+    background-color: #F7F9FC;
+  }
+
+  @include themeMidnight {
+    background-color: #F9F0E8;
+  }
+
+  @include themeDark {
+    background-color: #121621;
+  }
+
+  @include themeChangeTransition(background-color);
+}
