--- a/src/components/hero/hero.module.scss
+++ b/src/components/hero/hero.module.scss
@@ -9,7 +9,7 @@
   background-color: hsl(0, 0, 8%);
 
   &__canvas {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -23,6 +23,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    width: 100%;
     position: relative;
     flex-grow: 1;
     z-index: 3;
