--- a/src/pages/_main/_main.module.scss
+++ b/src/pages/_main/_main.module.scss
@@ -121,10 +121,10 @@
 
 .spotify-playlist {
   position: relative;
+  border-radius: get-rem(8);
   width: 100%;
   height: 100%;
   z-index: 1;
-
 }
 
 .loader {
