--- a/src/components/hero/hero.module.scss
+++ b/src/components/hero/hero.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   align-items: stretch;
   min-height: 100%;
-  background-color: hsl(0, 0, 8%);
+  background-color: #141414;
 
   &__canvas {
     position: fixed;
