--- a/src/styles/functions.scss
+++ b/src/styles/functions.scss
@@ -1,5 +1,5 @@
 @import './variables';
 
 @function get-rem($pixels, $context: $rootFontSize) {
-  @return $pixels / $context+rem;
+  @return calc($pixels / $context) + rem;
 }
