--- a/src/templates/cv-regular/main-block/main-block.module.scss
+++ b/src/templates/cv-regular/main-block/main-block.module.scss
@@ -139,20 +139,32 @@
       flex-shrink: 1;
       padding-bottom: 0;
     }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
-  &__location {
+  &__metric {
     display: flex;
     align-items: center;
+
+    @include screenMd {
+      margin-bottom: get-rem(2);
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
   }
 
-  &__location-icon {
+  &__metrics-icon {
     display: block;
-    width: get-rem(12);
-    min-width: get-rem(12);
-    height: get-rem(12);
-    margin-right: get-rem(4);
-    transform: translateY(-10.5%);
+    width: get-rem(10);
+    min-width: get-rem(10);
+    height: get-rem(10);
+    margin-right: get-rem(5);
+    transform: translateY(-12.5%);
 
     @include themeLight {
       fill: $lightThemeLightGray;
@@ -203,8 +215,13 @@
       margin-bottom: 0;
     }
 
+    @include screenMd {
+      flex-basis: 50%;
+      max-width: 50%;
+    }
+
     @include screenXl {
-      flex: 1 1 33.333333%;
+      flex-basis: 33.333333%;
       max-width: 33.333333%;
     }
   }
