--- a/src/templates/cv-regular/main-block/main-block.module.scss
+++ b/src/templates/cv-regular/main-block/main-block.module.scss
@@ -128,6 +128,8 @@
       width: get-rem(48);
       height: get-rem(48);
     }
+
+    @include midnightThemeFilterSepia;
   }
 
   &__metrics {
@@ -295,6 +297,8 @@
       min-width: get-rem(48);
       height: get-rem(48);
     }
+
+    @include midnightThemeFilterSepia;
   }
 
   &__info {
