--- a/src/styles/functions.scss
+++ b/src/styles/functions.scss
@@ -3,3 +3,7 @@
 @function get-rem($pixels, $context: $rootFontSize) {
   @return calc($pixels / $context) + rem;
 }
+
+@function get-in($pixels, $dpi: 72) {
+  @return calc($pixels / $dpi) + in;
+}
