--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
 @import './variables';
+@import './functions';
 @import './mixins';
 
 * {
@@ -16,6 +17,10 @@ body,
 
 html {
   font-size: $rootFontSize + px;
+
+  @include print {
+    font-size: get-in($rootFontSize);
+  }
 }
 
 * {
