--- a/src/templates/cv-regular/aside/aside.module.scss
+++ b/src/templates/cv-regular/aside/aside.module.scss
@@ -142,8 +142,6 @@
   @include themeChangeTransition(background-color);
 
   &__icon {
-    width: get-rem(14);
-    min-width: get-rem(14);
     height: get-rem(14);
     opacity: 0.9;
 
@@ -177,7 +175,7 @@
 .flag-icon {
   border-radius: get-rem(4);
   width: 100%;
-  overflow: hidden;
+  transform: translateZ(0);
 
   @include midnightThemeFilterSepia;
 }
