--- a/src/templates/cv-regular/aside/aside.module.scss
+++ b/src/templates/cv-regular/aside/aside.module.scss
@@ -1,5 +1,5 @@
-@import "~/styles/functions.scss";
-@import "~/styles/mixins.scss";
+@import "~styles/functions.scss";
+@import "~styles/mixins.scss";
 @import '~components/theme/theme-provider-mixins.module.scss';
 @import '~components/typography/typography.module.scss';
 
