--- a/src/templates/cv-regular/aside/aside.module.scss
+++ b/src/templates/cv-regular/aside/aside.module.scss
@@ -144,6 +144,7 @@
   &__icon {
     height: get-rem(14);
     opacity: 0.9;
+    transform: translateZ(0);
 
     @include themeLight {
       fill: $lightThemeGray;
