--- a/src/components/hero/hero.module.scss
+++ b/src/components/hero/hero.module.scss
@@ -18,8 +18,11 @@
     width: 100%;
     height: 100%;
     z-index: 1;
-    filter: blur(90px);
     pointer-events: none;
+
+    &_safari-fix {
+      filter: blur(90px);
+    }
   }
 
   &__body {
