--- a/src/templates/cv-regular/aside/aside.module.scss
+++ b/src/templates/cv-regular/aside/aside.module.scss
@@ -1,5 +1,5 @@
-@import "~styles/functions.scss";
-@import "~styles/mixins.scss";
+@import '~styles/functions.scss';
+@import '~styles/mixins.scss';
 @import '~components/theme/theme-provider-mixins.module.scss';
 @import '~components/typography/typography.module.scss';
 
@@ -13,11 +13,11 @@
   }
 
   @include themeLight {
-    background-color: #F7F9FC;
+    background-color: #f7f9fc;
   }
 
   @include themeMidnight {
-    background-color: #F9F0E8;
+    background-color: #f9f0e8;
   }
 
   @include themeDark {
@@ -47,7 +47,7 @@
     }
 
     @include themeDark {
-      background-color: #1B2132;
+      background-color: #1b2132;
     }
 
     @include themeChangeTransition(background-color);
@@ -96,15 +96,27 @@
   text-fill-color: transparent;
 
   @include themeLight {
-    background-image: linear-gradient(102.91deg, hsl(277, 49%, 29%) 2.33%, hsl(212, 61%, 42%) 100%);
+    background-image: linear-gradient(
+      102.91deg,
+      hsl(277, 49%, 29%) 2.33%,
+      hsl(212, 61%, 42%) 100%
+    );
   }
 
   @include themeMidnight {
-    background-image: linear-gradient(102.91deg, hsl(5, 48%, 42%) 2.33%, hsl(5, 52%, 62%) 100%);
+    background-image: linear-gradient(
+      102.91deg,
+      hsl(5, 48%, 42%) 2.33%,
+      hsl(5, 52%, 62%) 100%
+    );
   }
 
   @include themeDark {
-    background-image: linear-gradient(102.91deg, hsl(277, 56%, 70%) 2.33%, hsl(212, 70%, 70%) 100%);
+    background-image: linear-gradient(
+      102.91deg,
+      hsl(277, 56%, 70%) 2.33%,
+      hsl(212, 70%, 70%) 100%
+    );
   }
 }
 
@@ -120,45 +132,56 @@
 
 .icon-container {
   display: flex;
+  position: relative;
   justify-content: center;
   align-items: center;
-  border-radius: 50%;
   width: 100%;
   height: 100%;
   min-width: 100%;
 
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: currentColor;
+    opacity: 0.2;
+  }
+
+  &__icon {
+    position: relative;
+    z-index: 2;
+    height: get-rem(14);
+    opacity: 0.8;
+    transform: translateZ(0);
+    fill: currentColor;
+  }
+}
+
+.contact-link {
+  width: auto;
+  text-decoration: none;
+
   @include themeLight {
-    background-color: #E2E6EE;
+    color: $lightThemeDarkGray;
   }
 
   @include themeMidnight {
-    background-color: hsl(28, 59%, 90%);
+    color: $midnightThemeDarkGray;
   }
 
   @include themeDark {
-    background-color: #2D3753;
+    color: $darkThemeDarkGray;
   }
 
-  @include themeChangeTransition(background-color);
+  @include themeChangeTransition(color);
 
-  &__icon {
-    height: get-rem(14);
-    opacity: 0.9;
-    transform: translateZ(0);
-
-    @include themeLight {
-      fill: $lightThemeGray;
-    }
-
-    @include themeMidnight {
-      fill: $midnightThemeGray;
-    }
-
-    @include themeDark {
-      fill: $darkThemeGray;
-    }
-
-    @include themeChangeTransition(fill);
+  &_hoverable {
+    @include linkHover;
   }
 }
 
