--- a/src/templates/cv-regular/cv.module.scss
+++ b/src/templates/cv-regular/cv.module.scss
@@ -143,7 +143,8 @@
   transition: background-color 300ms ease-in-out, box-shadow 300ms ease-in-out;
 
   &:hover {
-    transition-duration: 100ms;
+    transition-timing-function: linear;
+    transition-duration: 80ms;
   }
 
   @include themeLight {
