--- a/src/templates/cv-regular/download-button.module.scss
+++ b/src/templates/cv-regular/download-button.module.scss
@@ -28,6 +28,7 @@
 
   &:hover {
     transition-duration: 100ms;
+    transition-timing-function: linear;
 
     @include themeMidnight {
       background-color: hsl(5, 48%, 33%);
