--- a/src/templates/cv-regular/main-block/education.module.scss
+++ b/src/templates/cv-regular/main-block/education.module.scss
@@ -103,7 +103,8 @@
     transition: opacity 300ms ease-in-out;
 
     &:hover {
-      transition-duration: 100ms;
+      transition-timing-function: linear;
+      transition-duration: 80ms;
       opacity: 0.7;
     }
 
