--- a/src/components/theme/theme-provider-mixins.module.scss
+++ b/src/components/theme/theme-provider-mixins.module.scss
@@ -6,7 +6,7 @@ $dark: dark;
 @mixin theme($colors...) {
   @each $color in $colors {
     :global(.theme_#{$color}) & {
-      @content
+      @content;
     }
   }
 }
@@ -49,8 +49,8 @@ $dark: dark;
 
 @mixin themeTransition($properties...) {
   transition-property: $properties;
-  transition-timing-function: cubic-bezier(0.11, 0, 0.5, 0);
-  transition-duration: $themeChangingDuration+ms;
+  transition-timing-function: ease-out;
+  transition-duration: $themeChangingDuration + ms;
 }
 
 @mixin rootThemeChangeTransition($properties...) {
