--- a/src/templates/cv-regular/cv.module.scss
+++ b/src/templates/cv-regular/cv.module.scss
@@ -64,20 +64,20 @@
 
     @include themeLight {
       box-shadow: 0 get-rem(60) get-rem(36) hsla(215, 21%, 11%, 0.01),
-                  0 get-rem(26) get-rem(26) hsla(215, 21%, 11%, 0.01),
-                  0 get-rem(6) get-rem(14) hsla(215, 21%, 11%, 0.01);
+        0 get-rem(26) get-rem(26) hsla(215, 21%, 11%, 0.01),
+        0 get-rem(6) get-rem(14) hsla(215, 21%, 11%, 0.01);
     }
 
     @include themeMidnight {
       box-shadow: 0 get-rem(60) get-rem(36) hsla(215, 21%, 11%, 0.03),
-                  0 get-rem(26) get-rem(26) hsla(215, 21%, 11%, 0.02),
-                  0 get-rem(6) get-rem(14) hsla(215, 21%, 11%, 0.01);
+        0 get-rem(26) get-rem(26) hsla(215, 21%, 11%, 0.02),
+        0 get-rem(6) get-rem(14) hsla(215, 21%, 11%, 0.01);
     }
 
     @include themeDark {
       box-shadow: 0 get-rem(60) get-rem(36) rgba(0, 0, 0, 0.05),
-                  0 get-rem(26) get-rem(26) rgba(0, 0, 0, 0.1),
-                  0 get-rem(6) get-rem(14) rgba(0, 0, 0, 0.1);
+        0 get-rem(26) get-rem(26) rgba(0, 0, 0, 0.1),
+        0 get-rem(6) get-rem(14) rgba(0, 0, 0, 0.1);
     }
 
     @include themeChangeTransition(box-shadow);
@@ -99,6 +99,7 @@
   padding-right: get-rem(20);
   z-index: 3;
   transition: opacity 200ms ease-in-out, transform 200ms ease-in-out;
+  will-change: transform, opacity;
 
   @include screenLg {
     position: sticky;
@@ -106,8 +107,9 @@
     padding-right: 0;
     padding-left: get-rem(20);
     bottom: auto;
-    width: auto;
     top: get-rem(30);
+    transition: none;
+    will-change: none;
   }
 
   @include print {
@@ -151,8 +153,8 @@
     background-color: hsl(224, 30%, 22.5%);
     color: #fff;
     box-shadow: 0 0 get-rem(6) hsla(215, 21%, 11%, 0.01),
-                0 0 get-rem(3) hsla(215, 21%, 11%, 0.01),
-                0 0 get-rem(1) hsla(215, 21%, 11%, 0.01);
+      0 0 get-rem(3) hsla(215, 21%, 11%, 0.01),
+      0 0 get-rem(1) hsla(215, 21%, 11%, 0.01);
 
     &:hover {
       background-color: hsl(224, 30%, 35%);
@@ -163,8 +165,8 @@
     background-color: hsl(30, 50%, 70%);
     color: #fff;
     box-shadow: 0 0 get-rem(6) hsla(215, 21%, 11%, 0.01),
-                0 0 get-rem(3) hsla(215, 21%, 11%, 0.01),
-                0 0 get-rem(1) hsla(215, 21%, 11%, 0.01);
+      0 0 get-rem(3) hsla(215, 21%, 11%, 0.01),
+      0 0 get-rem(1) hsla(215, 21%, 11%, 0.01);
 
     &:hover {
       background-color: hsl(30, 50%, 50%);
@@ -175,8 +177,7 @@
     background-color: hsl(225, 14%, 50%);
     color: #fff;
     box-shadow: 0 0 get-rem(6) rgba(0, 0, 0, 0.05),
-                0 0 get-rem(3) rgba(0, 0, 0, 0.1),
-                0 0 get-rem(1) rgba(0, 0, 0, 0.1);
+      0 0 get-rem(3) rgba(0, 0, 0, 0.1), 0 0 get-rem(1) rgba(0, 0, 0, 0.1);
 
     &:hover {
       background-color: hsl(226, 27%, 32%);
