links hover improvements

--- a/src/components/theme/theme-provider-mixins.module.scss
+++ b/src/components/theme/theme-provider-mixins.module.scss
@@ -70,7 +70,7 @@ $dark: dark;
     filter: sepia($value);
   }
 
-  @include themeTransition(filter);
+  @include themeChangeTransition(filter);
 }
 
 :export {
