--- a/src/templates/cv-regular/aside/aside.module.scss
+++ b/src/templates/cv-regular/aside/aside.module.scss
@@ -159,6 +159,16 @@
     opacity: 0.6;
     transform: translateZ(0);
     fill: currentColor;
+
+    @include theme($light, $dark) {
+      filter: saturate(1.5);
+    }
+
+    @include themeMidnight {
+      filter: sepia(0.4);
+    }
+
+    @include themeTransition(filter);
   }
 }
 
@@ -192,8 +202,23 @@
   width: 100%;
   min-width: 100%;
   height: 100%;
+  transition: filter 300ms ease-in-out;
 
-  @include midnightThemeFilterSepia;
+  @include themeMidnight {
+    filter: sepia(0.3);
+  }
+}
+
+.contact-link:hover .social-icon {
+  transition-duration: 100ms;
+
+  @include theme($light, $dark) {
+    filter: saturate(1.2) brightness(1.1) contrast(1.01);
+  }
+
+  @include themeMidnight {
+    filter: sepia(0);
+  }
 }
 
 .flag-icon {
