--- a/src/templates/cv-regular/main-block/education.module.scss
+++ b/src/templates/cv-regular/main-block/education.module.scss
@@ -17,6 +17,7 @@
     width: 100%;
     height: 100%;
     border-radius: get-rem(16);
+    pointer-events: none;
 
     @include theme($light, $midnight) {
       box-shadow: 0 get-rem(18) get-rem(10) rgba(0, 0, 0, 0.01),
