--- a/src/templates/cv-regular/aside/aside.module.scss
+++ b/src/templates/cv-regular/aside/aside.module.scss
@@ -176,6 +176,7 @@
   width: 100%;
   min-width: 100%;
   height: 100%;
+  transform: translateZ(0);
 }
 
 .contact-link:hover .social-icon {
@@ -184,7 +185,7 @@
 
 .flag-icon {
   display: block;
-  height: auto;
+  height: 100%;
   width: 100%;
   max-width: 100%;
 }
