--- a/src/pages/_main/_main.module.scss
+++ b/src/pages/_main/_main.module.scss
@@ -68,18 +68,10 @@
     }
   }
 
-  &:hover,
-  &:active {
-    &::after {
-      transform: scaleX(0);
-    }
-  }
-
   &::after {
     content: '';
     position: absolute;
-    animation: slideIn 1s ease-in-out;
-    transition: transform 0.2s ease-in-out;
+    transition: transform 0.3s ease-out;
     will-change: transform;
     top: 120%;
     left: 0;
@@ -89,15 +81,11 @@
     pointer-events: none;
   }
 
-}
-
-@keyframes slideIn {
-  from {
-    transform: scaleX(0);
-  }
-
-  to {
-    transform: scaleX(1);
+  &:hover,
+  &:active {
+    &::after {
+      transform: scaleX(0);
+    }
   }
 }
 
