--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 $rootFontSize: 16;
 
-$primaryFont: 'TT Commons', -apple-system, sans-serif;
+$primaryFont: 'TT Commons', 'SF Pro Text', -apple-system, sans-serif;
 
 $screenMd: 768px;
 $screenLg: 992px;
