--- a/src/templates/cv-regular/aside/aside.module.scss
+++ b/src/templates/cv-regular/aside/aside.module.scss
@@ -82,7 +82,7 @@
   text-fill-color: transparent;
 
   @include themeLight {
-    background-image: linear-gradient(102.91deg, #556af6 5%, #8f94fb 100%);
+    background-image: linear-gradient(102.91deg, hsl(232, 90%, 45%) 5%, hsl(255, 83%, 65%) 100%);
   }
 
   @include themeMidnight {
